--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,13 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed": "ts-node src/seed.ts"
+    "seed": "ts-node src/seed.ts",
+    "typeorm": "typeorm-ts-node-commonjs -d typeorm.config.ts",
+    "migration:create": "typeorm migration:create",
+    "migration:generate": "typeorm -d migration-runner.js migration:generate",
+    "migration:run": "typeorm -d migration-runner.js migration:run",
+    "migration:show": "typeorm -d migration-runner.js migration:show",
+    "migration:revert": "typeorm -d migration-runner.js migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
