chore: ignore uploaded files and add .gitkeep files

--- a/.gitignore
+++ b/.gitignore
@@ -53,4 +53,10 @@ coverage/
 
 # Database
 *.sqlite
-*.db 
+*.db
+
+# Uploaded files
+uploads/avatars/*
+uploads/recipes/*
+!uploads/avatars/.gitkeep
+!uploads/recipes/.gitkeep 
