--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,31 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~5.0.4",
+    "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@tanstack/react-query": "^5.81.5",
     "axios": "^1.10.0",
-    "expo": "~53.0.17",
-    "expo-image-picker": "^16.1.4",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "expo": "~54.0.0",
+    "expo-image-picker": "~17.0.8",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.59.0",
-    "react-native": "0.79.5",
+    "react-native": "0.81.4",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.5.1",
-    "react-native-screens": "^4.11.1",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/node": "^24.0.10",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
